--- a/index.html
+++ b/index.html
@@ -33,15 +33,6 @@ js:
 Reuse the old solved RPS logic. These are the html elements that that solution used to make it work:
 -->
 
-<div>
-    <p id="directions-text"></p>
-    <p id="userchoice-text"></p>
-    <p id="computerchoice-text"></p>
-    <p id="wins-text"></p>
-    <p id="losses-text"></p>
-    <p id="ties-text"></p>
-</div>
-
 
 <!-- So, given this, we'll have to do some adaptations and additions, etc etc
 
@@ -52,7 +43,11 @@ Most importantly, we need to figure out how things are going to go to and from t
 -Second player choice is made, that user's ID is grabbed
 -Their choice becomes Choice2
 
-The RPS js logic is run based on Choice1 and Choice2, and the corresponding results are slapped into the correct .html sections.-->
+The RPS js logic is run based on Choice1 and Choice2, and the corresponding results are slapped into the correct .html sections.
+
+If we can have a 'wins counter' and 'losses counter', they should be stored in LocalStorage, if anywhere, or just in session memory.
+
+-->
 
 <!doctype html>
 <html>
@@ -60,20 +55,29 @@ The RPS js logic is run based on Choice1 and Choice2, and the corresponding resu
 <head>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
         crossorigin="anonymous">
-
-    <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
-        crossorigin="anonymous"></script>
+    <!-- JQuery -->
+    <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
+    <!-- Firebase -->
     <script src="https://www.gstatic.com/firebasejs/5.7.0/firebase.js"></script>
-
+    <!-- Local CSS, Javascript -->
     <link rel="stylesheet" href="./assets/css/style.css">
-    <script src="javascript/app.js"></script>
-    <script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
+    <script src="./assets/js/app.js"></script>
 
 </head>
 
 <body>
+    
+<div>
 
+        <p id="userchoice-text"></p>
+        <p id="computerchoice-text"></p>
+        <p id="wins-text"></p>
+        <p id="losses-text"></p>
+        <p id="ties-text"></p>
+    </div>
+ 
 
+    <div id="background">
     <div id="titletron" class="jumbotron jumbotron-fluid">
         <div class="container">
             <h1 class="display-4">EPIC BATTLE: ROCK PAPER SCISSORS MULTIPLAYER</h1>
@@ -81,17 +85,14 @@ The RPS js logic is run based on Choice1 and Choice2, and the corresponding resu
         </div>
     </div>
 
-    <div id="background">
         <div class="container">
             <div class="row">
                 <div class="col-11">
-                        <div class="card" id="messageSpace">
-                                <div class="card-body">
-                                    <h5 class="card-title"></h5>
+                        <div class="card">
+                                <div class="card-body"  id="messageSpace">
                                     </form>
                                 </div>
-                            </div>
-
+                        </div>
                 </div>
             </div>
         </div>
@@ -108,7 +109,9 @@ The RPS js logic is run based on Choice1 and Choice2, and the corresponding resu
                         </div>
                         <div class="card-body">
                             <h5 class="card-title"></h5>
-                            </form>
+                            <img class="playIMG" id="rock" src="./assets/images/rock.jpg">
+                            <img class="playIMG" id="paper" src="./assets/images/paper.jpg">
+                            <img class="playIMG" id="scissors" src="./assets/images/scissors.png">
                         </div>
                     </div>
                 </div>
@@ -119,7 +122,6 @@ The RPS js logic is run based on Choice1 and Choice2, and the corresponding resu
                         </div>
                         <div class="card-body">
                             <h5 class="card-title"></h5>
-                            </form>
                         </div>
                     </div>
 
@@ -131,7 +133,9 @@ The RPS js logic is run based on Choice1 and Choice2, and the corresponding resu
                         </div>
                         <div class="card-body">
                             <h5 class="card-title"></h5>
-                            </form>
+                            <img class="playIMG" id="rock" src="./assets/images/rock.jpg">
+                            <img class="playIMG" id="paper" src="./assets/images/paper.jpg">
+                            <img class="playIMG" id="scissors" src="./assets/images/scissors.png">
                         </div>
                     </div>
                 </div>
