--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@ If we can have a 'wins counter' and 'losses counter', they should be stored in L
 <html>
 
 <head>
+    <!-- Bootstrap -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
         crossorigin="anonymous">
     <!-- JQuery -->
@@ -105,7 +106,7 @@ If we can have a 'wins counter' and 'losses counter', they should be stored in L
                 <div class="col-4">
                     <div class="card" id="player1">
                         <div class="card-header">
-                            <h3>PLAYER 1</h3>
+                            <h3 id='playerOne'></h3>
                         </div>
                         <div class="card-body">
                             <h5 class="card-title"></h5>
@@ -127,9 +128,9 @@ If we can have a 'wins counter' and 'losses counter', they should be stored in L
 
                 </div>
                 <div class="col-4">
-                    <div class="card" id="player1">
+                    <div class="card" id="player2">
                         <div class="card-header">
-                            <h3>PLAYER 2</h3>
+                            <h3 id="playerTwo"></h3>
                         </div>
                         <div class="card-body">
                             <h5 class="card-title"></h5>
