Gameplay works. Working on chat functionality.

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ If we can have a 'wins counter' and 'losses counter', they should be stored in L
 
         <br>
         <br>
-
+ 
         <div class="container">
             <div class="row">
                 <div class="col-4">
@@ -122,7 +122,14 @@ If we can have a 'wins counter' and 'losses counter', they should be stored in L
                             <h3>CHAT</h3>
                         </div>
                         <div class="card-body">
-                            <h5 class="card-title"></h5>
+                                <div class="form-group">
+                                        <form class='needs-validation' novalidate>
+                                        <label for="exampleFormControlTextarea1">Chat with your opponent!</label>
+                                        <textarea id="chatArea" class="form-control" id="exampleFormControlTextarea1" rows="8"></textarea>
+                                        <button id="chatButton" type="button" class="btn btn-primary">Chat</button>
+                                    </form>
+                                </div>
+                            
                         </div>
                     </div>
 
