chat working, MVP-style

--- a/index.html
+++ b/index.html
@@ -78,14 +78,14 @@ If we can have a 'wins counter' and 'losses counter', they should be stored in L
     </div>
  
 
-    <div id="background">
+    
     <div id="titletron" class="jumbotron jumbotron-fluid">
         <div class="container">
             <h1 class="display-4">EPIC BATTLE: ROCK PAPER SCISSORS MULTIPLAYER</h1>
             <h4 class="lead">Choose Your Weapon.</h4>
         </div>
     </div>
-
+    <div id="background"></div>
         <div class="container">
             <div class="row">
                 <div class="col-11">
